# space_soup_engine

./: .gitignore  Cargo.toml  api.txt
src/: animation.rs  attach.rs  audio.rs  debug_protocol.rs  events.rs  hands.rs  lib.rs  locomotion.rs  manifest.rs  physics.rs  procedural_hand.rs  rig.rs  rig_profile.rs  rigid_physics.rs  runtime.rs  scene.rs  script.rs
