[package]
name    = "space_soup_engine"
version = "0.1.0"
edition = "2021"

[lib]
name = "space_soup_engine"
path = "src/lib.rs"

[dependencies]
space_soup = { path = "../space_soup" }
# Just for the PlayerId newtype, so the engine and the multiplayer wire
# protocol share one player-identity type instead of duplicating it. This
# crate stays dependency-light itself, so it doesn't drag anything into the
# engine that wasn't already here.
space_soup_protocol = { path = "../space_soup_protocol" }

glam = { version = "0.29", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
log = "0.4"
rhai = { version = "1.19", features = ["sync"] }
physx = "0.19.0"
physx-sys = "0.11.5"
gltf = "1.4"
kira = "0.12.1"
mint = "0.5"
